JK-1418: write state/aot/aot.toml as human-readable AOT cache index
Opaque *.aot hashes are hard to interpret. Record tool, key, JDK, GC,
classpath, JVM flags, and timestamps on train/use/sweep/prune so each
file under state/aot is documented in aot.toml.